--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,8 @@
 
   --shadow-black: 4px 4px 0 #000;
   --shadow-white: 4px 4px 0 #fff;
+
+   --grid-auto: repeat(auto-fit, minmax(250px, 1fr));
 }
 * {
 	font-family: outfit;
